+ removed ::: internal dependencies (within distr-Fam of pkgs) by copying 
  respective routines
+ qqplot:
   * (already there for a while) gains ability to interchange x- and y-
      axis by argument 'datax' for compatibility with other qqplots 
   * gains new methods for object of class "Estimate" (which could also be 
     seen as "fitted" objects...)
+ returnlevelplot
   * similar 
+ new internal method  .checkEstClassForParamFamily-method to be called 
  immediately before returning an Estimate object (in functions Estimator(), 
  MCEstimator(), MDEstimator(), MLEstimator()); this allows to return an
  object of S4 class specific to the resp. parametric family (by means of
  S4 method dispatch); this is used in pkg 'RobExtremes' to produce, e.g., 
  objects of class "GEVMCEstimate", i.e. which inherit from both 
  "MCEstimate" and "GEVEstimate", so that a diag-method for 
  "GEVEstimate" becomes available for this class.

  BUGFIXES:

+ fixed issue with slot withPosRestr in ParamFamParameter.R 
+ fixed issue with check.validity (reported by B.Spangl)
+ fixed some minor issue in existsPIC (in case we get 0 matrix, and less strict tolerance) 
 
##############
v 2.5
##############

user-visible CHANGES:

GENERAL ENHANCEMENTS:
+ cleaned DESCRIPTION and NAMESPACE file as to Imports/Depends

under the hood:
+ For speeding up things, we now have an option withL2derivDistr = TRUE which
  if FALSE skips computing the image distribution in two dimensional models,
  i.e., have switched slot L2derivDistr from "DistrList" to "OptionalDistrList".

+ delayed calculation of variances and allow to skip or delay calculation of
  L2derivDistr; to this end introduced new class unions
  "OptionalNumericOrMatrixOrCall", "OptionalDistrListOrCall";
  respectively at certain stages, evaluation of the call must then be forced

+ consequence: L2LocationScaleFamilies now use median mad as starting estimator
               in robest roptest (and no longer call CvM-MDE)
